Wrote a ton. Finished almost all sections except abstract and some fiddling in the introductory material.

--- a/manuscript/thesis.bib
+++ b/manuscript/thesis.bib
@@ -139,6 +139,20 @@ url = "http://www.sciencedirect.com/science/article/pii/0550321383903073",
 author = "Alan H. Guth and Erick J. Weinberg"
 }
 
+@article{Ijjas+2013,
+title = "Inflationary paradigm in trouble after Planck2013 ",
+journal = "Physics Letters B ",
+volume = "723",
+number = "4–5",
+pages = "261 - 266",
+year = "2013",
+note = "",
+issn = "0370-2693",
+doi = "http://dx.doi.org/10.1016/j.physletb.2013.05.023",
+url = "http://www.sciencedirect.com/science/article/pii/S0370269313003924",
+author = "Anna Ijjas and Paul J. Steinhardt and Abraham Loeb"
+}
+
 @ARTICLE{Kallosh+2013,
    author = {{Kallosh}, R. and {Linde}, A. and {Roest}, D.},
     title = "{Superconformal inflationary {$\alpha$}-attractors}",
@@ -168,6 +182,20 @@ note = "",
 issn = "0370-2693",
 doi = "http://dx.doi.org/10.1016/0370-2693(83)90837-7",
 url = "http://www.sciencedirect.com/science/article/pii/0370269383908377",
+author = "A.D. Linde"
+}
+
+@article{Linde1986,
+title = "Eternally existing self-reproducing chaotic inflanationary universe ",
+journal = "Physics Letters B ",
+volume = "175",
+number = "4",
+pages = "395 - 400",
+year = "1986",
+note = "",
+issn = "0370-2693",
+doi = "http://dx.doi.org/10.1016/0370-2693(86)90611-8",
+url = "http://www.sciencedirect.com/science/article/pii/0370269386906118",
 author = "A.D. Linde"
 }
 
@@ -214,6 +242,43 @@ keywords = "Preheating "
      year = 2005,
     month = mar,
    adsurl = {http://adsabs.harvard.edu/abs/2005hep.th....3203L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{Linde2008,
+   author = {{Linde}, A.},
+    title = "{Inflationary Cosmology}",
+booktitle = {Inflationary Cosmology},
+     year = 2008,
+   series = {Lecture Notes in Physics, Berlin Springer Verlag},
+   volume = 738,
+archivePrefix = "arXiv",
+   eprint = {0705.0164},
+ primaryClass = "hep-th",
+   editor = {{Lemoine}, M. and {Martin}, J. and {Peter}, P.},
+    pages = {1},
+      doi = {10.1007/978-3-540-74353-8_1},
+   adsurl = {http://adsabs.harvard.edu/abs/2008LNP...738....1L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@BOOK{MukhanovBook2005,
+	AUTHOR = {{Mukhanov}, V.},
+	TITLE = {Physical Foundations of Cosmology},
+	Publisher = {Cambridge University Press, Cambridge},
+	YEAR = {2005},
+}
+
+@ARTICLE{Mukhanov2014,
+   author = {{Mukhanov}, V.},
+    title = "{Inflation without Selfreproduction}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1409.2335},
+ keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, High Energy Physics - Theory},
+     year = 2014,
+    month = sep,
+   adsurl = {http://adsabs.harvard.edu/abs/2014arXiv1409.2335M},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
